Portfolio Website : Done

--- a/6. Build A Beautiful Portfolio Website /index.html
+++ b/6. Build A Beautiful Portfolio Website /index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c426595272.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header secondary-bg">
@@ -21,13 +22,14 @@
                 <h4 class="banner-greetings dark-2">Hi, I  am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button>Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-contact"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="portfolio-resources/images/hardy.png" alt="">
         </div>
     </header>
     <main >
+        <!-- About Me -->
         <section class="about secondary-bg">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -51,11 +53,99 @@
             </div>
         </section>
 
-        <!-- What i do section Start-->
-        
+        <!-- What i do -->
+         <section class="skills">
+            <h4 class="section-title text-center">What I do</h4>
+            <p class="section-description text-center skills-pad">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">
+                        JavaScript, often abbreviated as JS, is a programming language and core technology of the Web, alongside HTML and CSS. 99% of websites use JavaScript on the client side for webpage behavior. Web browsers have a dedicated JavaScript engine that executes the client code
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">React is a free and open-source front-end JavaScript library for building user interfaces based on components by Facebook Inc. It is maintained by Meta and a community of individual developers and companies. React can be used to develop single-page, mobile, or server-rendered applications with frameworks like Next.js</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows, Linux, Unix, macOS, and more. Node.js runs on the V8 JavaScript engine, and executes JavaScript code outside a web browser. Node.js lets developers use JavaScript to write command line tools and for server-side scripting</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources/images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, MongoDB utilizes JSON-like documents with optional schemas. MongoDB is developed by MongoDB Inc. and current versions are licensed under the Server Side Public License.</p>
+                </div>
+            </div>
+         </section>
+        <!-- Resume -->
+         <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="education-title">Phd in Quantum Computing</h4>
+                        <h5 class="education-subtitle">Harvard University / 2017 - 2021</h5>
+                    </div>
+                    <hr>
+                    <div class="education">
+                        <h4 class="education-title">Master in Computer Engineering</h4>
+                        <h5 class="education-subtitle">Harvard University / 2015 - 2017</h5>
+                    </div>
+                    <hr>
+                    <div class="education">
+                        <h4 class="education-title">Bachelor in Computer Engineering</h4>
+                        <h5 class="education-subtitle">Harvard University / 2011 - 2015</h5>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4> 
+                        <h5 class="experience-subtitle">Apple Inc / 2020 - Current</h5>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-subtitle">Dribbble Inc / 2018 - 2020</h5>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-center">
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
+            
+         </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+        <h3 class="footer-title">Lets Connect</h3>
+        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div>
+            <a href=""><img src="/portfolio-resources/images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="/portfolio-resources/images/icons/insta.png" alt=""></a>
+            <a href=""><img src="/portfolio-resources/images/icons/twitter.png" alt=""></a></div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">Let's Inbox Me</h3>
+            <form action="">
+                <input class="input-style" type="text" placeholder="Your name">
+                <input class="input-style" type="email" placeholder="Your email">
+                <textarea class="input-style" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="button" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
