--- a/Practice 1. New Year 2024/index.html
+++ b/Practice 1. New Year 2024/index.html
@@ -142,9 +142,9 @@
                     <input class="subscribe" type="button" value="Subscribe">
                 </div>
             </div>
-            
         </section>
     </main>
+    <!-- Footer -->
     <footer>
         <section class="footer-section-container">
             <div class="footer-container">
