--- a/33. API, JSON, Data Load, Dynamic Website /post.html
+++ b/33. API, JSON, Data Load, Dynamic Website /post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Post</title>
     <style>
         .post{
             background-color: lightskyblue;
@@ -16,6 +16,7 @@
 <body>
     <header>
         <h1>Display all post</h1>
+        
     </header>
     <main>
         <section>
@@ -25,7 +26,6 @@
             </div>
         </section>
     </main>
-
 
     <script src="Javascript/post.js"></script>
 </body>
